Fix navbar not collapsing with my added elements

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -734,3 +734,18 @@ raids styles
 	text-decoration: none;
 	color: inherit;
 }
+
+@media (min-width: 768px) and (max-width: 1199px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
